@@ -6,6 +6,9 @@ Changes with Apache 2.3.9
      Fix a denial of service attack against mod_reqtimeout.
      [Stefan Fritsch]
 
+  *) mod_disk_cache: CacheMaxFileSize, CacheMinFileSize, CacheReadSize and
+     CacheReadTime can be set per directory/location. [Graham Leggett]
+
   *) core: Speed up config parsing if using a very large number of config
      files. PR 50002 [andrew cloudaccess net]
 
